@@ -1,166 +1,0 @@
-// The purpose of these patches is to set some meaningful defaults
-// for the terminal maneuvering feature of some known cruise missiles
-
-
-// RGM-84 Harpoon: RADAR terminal guidance
-@PART[RGM84ASM]
-{
-	// heavier, less agile version with greater range and larger blastradius warhead
-
-	@MODULE[MissileLauncher]
-	{
-		%terminalManeuvering = true
- 		%terminalGuidanceType = radar
-		%terminalGuidanceDistance = 2000
-
-		%activeRadarRange = 3000
-		%maxOffBoresight = 65
-		%lockedSensorFOV = 10
-		%radarLOAL = true
-	}
-}
-
-@PART[PEWRGM-84]
-{
-
-	@MODULE[MissileLauncher]
-	{
-		%terminalManeuvering = true
- 		%terminalGuidanceType = radar
-		%terminalGuidanceDistance = 2000
-
-		%activeRadarRange = 3000
-		%maxOffBoresight = 65
-		%lockedSensorFOV = 10
-		%radarLOAL = true
-	}
-}
-
-// AGM-84 SLAMMER: HEAT terminal guidance
-@PART[PEWAGM-84SLAMER]
-{
-
-	@MODULE[MissileLauncher]
-	{
-		%terminalManeuvering = false
- 		%terminalGuidanceType = heat
-		%terminalGuidanceDistance = 2000
-
-		%activeRadarRange = 0
-		%maxOffBoresight = 75
-		%lockedSensorFOV = 10
-		%heatThreshold = 10
-	}
-}
-
-
-// AGM-158: HEAT terminal guidance
-@PART[agm158]
-{
-
-	@MODULE[MissileLauncher]
-	{
-		%minStaticLaunchRange = 1000
-		%maxStaticLaunchRange = 9000
-
-		%terminalManeuvering = false
- 		%terminalGuidanceType = heat
-		%terminalGuidanceDistance = 2000
-
-		%activeRadarRange = 0
-		%maxOffBoresight = 65
-		%lockedSensorFOV = 10
-		%heatThreshold = 5
-	}
-}
-
-// RBS-15: RADAR terminal guidance
-@PART[bahaRBS-15Cruise]
-{
-
-	@MODULE[MissileLauncher]
-	{
-		%terminalManeuvering = true
- 		%terminalGuidanceType = radar
-		%terminalGuidanceDistance = 4000
-
-		%activeRadarRange = 4500
-		%maxOffBoresight = 65
-		%lockedSensorFOV = 15
-		%radarLOAL = true
-	}
-}
-
-// P800 Oniks: RADAR terminal guidance
-@PART[PEWP-800-Oniks]
-{
-
-	@MODULE[MissileLauncher]
-	{
-		%terminalManeuvering = false
- 		%terminalGuidanceType = radar
-		%terminalGuidanceDistance = 4000
-
-		%activeRadarRange = 4500
-		%maxOffBoresight = 60
-		%lockedSensorFOV = 10
-		%radarLOAL = true
-	}
-}
-
-// KH-35: RADAR terminal guidance
-@PART[PEWKH-35]
-{
-
-	@MODULE[MissileLauncher]
-	{
-		%terminalManeuvering = true
- 		%terminalGuidanceType = radar
-		%terminalGuidanceDistance = 3000
-
-		%activeRadarRange = 3500
-		%maxOffBoresight = 60
-		%lockedSensorFOV = 10
-		%radarLOAL = true
-	}
-}
-
-
-// SM-13: RADAR terminal guidance
-@PART[ASMsm13]
-{
-
-	@MODULE[MissileLauncher]
-	{
-		%terminalManeuvering = true
- 		%terminalGuidanceType = radar
-		%terminalGuidanceDistance = 4500
-
-		%activeRadarRange = 5000
-		%maxOffBoresight = 65
-		%lockedSensorFOV = 10
-		%radarLOAL = true
-	}
-}
-
-// SM-2: RADAR terminal guidance
-@PART[ASMsm2]
-{
-
-	@MODULE[MissileLauncher]
-	{
-
-		%minStaticLaunchRange = 3000
-		%maxStaticLaunchRange = 21000
-
-		%terminalManeuvering = true
- 		%terminalGuidanceType = radar
-		%terminalGuidanceDistance = 3500
-
-		%activeRadarRange = 4500
-		%maxOffBoresight = 65
-		%lockedSensorFOV = 10
-		%radarLOAL = true
-	}
-}
-
